lessons/lesson-1.2/deny-external-egress.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-internal-and-dns-egress
spec:
  podSelector:
    matchLabels:
      app: internal
  policyTypes:
  - Egress
  egress:
  - to:  # Allows egress to all pods within the same namespace
      - podSelector: {}
  - to:  # Allows DNS resolution
    - namespaceSelector:
        matchLabels:
          kubernetes.io/metadata.name: kube-system
      podSelector:
        matchLabels:
          k8s-app: kube-dns
    ports:
      - port: 53
        protocol: UDP
      - port: 53
        protocol: TCP
